--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Compiled class file
 *.class
 
-.idea
+/.idea
+/target
 .mvn
 
 # Log file
@@ -24,3 +25,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+*.iml
