--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,15 @@
 			<version>3.0.2</version>
 		</dependency>
 		<!--整合memcached-->
+
+
+		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.49</version>
+		</dependency>
+
 	</dependencies>
 
 
